fixed overflow in title

--- a/src/app.scss
+++ b/src/app.scss
@@ -107,3 +107,7 @@ select {
 .desc {
   word-break: break-word;
 }
+
+.title {
+  word-break: break-word;
+}
